--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     <main>
         <section class="sección">
             <div class="icons">
-                <a href="https://www.facebook.com/"> <i class='bx bxl-facebook'></i></a>
-                <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>
-                <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a> 
+                <a href="https://www.facebook.com/"> <i class='bx bxl-facebook'></i></a>;
+                <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>;
+                <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a>; 
             </div>   
+            <p>Para mas información podes contactarme y descargar mi curriculum</p>
+                <div class="btns">
+                    <a class="boton" href="http://127.0.0.1:5501">DESCARGAR CV</a>
+                    <a class="boton"href="https://whatsapp.com/dl/code=AIGCozbq6G">CONTACTAME</a>
+                </div>
             </section>
         </main>
 </body>
