--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
                 </div>
             </section>
         </main>
+        <hr> 
+        <div class="contenido">
+            <h3>Datos personales</h3>
+            <ul>
+                <li>Lugar de Nacimiento:<p>Córdoba,Argentina</p></li>
+                <li>Edad: <p>30  años</p></li>
+                <li>Estado Civil:<p>Soltera</p></li>
+            </ul>
+        </div>
 </body>
 </html>
