--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
                 <li>Estado Civil:<p>Soltera</p></li>
             </ul>
         </div>
+        <hr>
+        <div class="contenido">
+            <h3>Formación</h3>
+            <ul>
+                <li>Título secundario:</li>
+                <p>Dic 2012,"EPET"</p>
+                <li>Tecnicatura Universitaria en Programación:</li>
+                <p> May 2024,"UTN"(en proceso)</p>
+            <ul>
+        </div>
 </body>
 </html>
