Agregar mas datos personales

--- a/index.html
+++ b/index.html
@@ -49,5 +49,14 @@
                 <p> May 2024,"UTN"(en proceso)</p>
             <ul>
         </div>
+        <hr>
+        <div class="contenido">
+                <h3>Idiomas</h3>
+            <ul>
+                <li>Español:</li>
+                <p>Nativo</p>
+                <li>Ingles:</li>
+                <p>Tecnico básico</p>
+            </ul>
 </body>
 </html>
