--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
                 <li>Ingles:</li>
                 <p>Tecnico básico</p>
             </ul>
+        </div>
+        <hr>
+        <div class="contenido">
+                <h3>Habilidades</h3>
+            <ul>
+                <li>Microsoft Word</li>
+                <li>Microsoft Excel</li>
+                <li>Microsoft PowerPoint</li>
+            </ul>
+        </div>
 </body>
 </html>
