Agrgar contenedor de img

--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
                 <li>Microsoft PowerPoint</li>
             </ul>
         </div>
+        <hr>
+        <div class="contenido">
+            <h3>Sobre mí</h3>
+                <div class="contenedorimg"><img class= "imgfondo" src="imgfondo.jpg"></div>
+                    <p class="textop"Soy una persona comprometida,responzable con objetivos claros,sociable y carismatica.”></p>
+        </div>
 </body>
 </html>
