--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@
                 <div class="contenedorimg"><img class= "imgfondo" src="imgfondo.jpg"></div>
                     <p class="textop"Soy una persona comprometida,responzable con objetivos claros,sociable y carismatica.”></p>
         </div>
+    </div>
+    <footer>
+        <div>
+            <h5> </h5></div>
+        <div><p>© [Orellano,Celeste].[Tec.Universitaria en Programación] "Todos los derechos reservados. Diseñado y desarrollado con pasión y dedicación."</p></div>
+    </footer>
 </body>
 </html>
