se agrego modificaciones

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main>
         <section class="sección">
             <div class="icons">
-                <a href="https://www.facebook.com/"> <i class='bx bxl-facebook'></i></a>;
-                <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>;
-                <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a>; 
+                <a href="https://www.facebook.com/"> <i class='bx bxl-facebook'></i></a>
+                <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>
+                <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a>
             </div>   
             <p>Para mas información podes contactarme y descargar mi curriculum</p>
                 <div class="btns">
@@ -31,6 +31,31 @@
             </section>
         </main>
         <hr> 
+        <div class="contenido">
+            <h3>Tools and technologies</h3>
+            <table class="tabla-cursos">
+                <thead>
+                    <tr>
+                        <th>  Año  </th>
+                        <th>  Programming languages  </th>
+                        <th>  Institución  </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2024</td>
+                        <td>Python, JavaScript</td>
+                        <td>UTN</td>
+                    </tr>
+                    <tr>
+                        <td>2025</td>
+                        <td> React, Node.js, Git, MySQL </td>
+                        <td>UTN</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <hr>
         <div class="contenido">
             <h3>Datos personales</h3>
             <ul>
@@ -68,6 +93,8 @@
                 <li>Microsoft PowerPoint</li>
             </ul>
         </div>
+        
+
         <hr>
         <div class="contenido">
             <h3>Sobre mí</h3>
