--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>
                 <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a>
             </div>   
-            <p>Para mas información podes contactarme y descargar mi curriculum</p>
+            <p>Para mas información podes contactarme y descargar mi curriculum o ver mi portafolio</p>
+            <div class="btns">
+                <a class="boton" href="portfolio.html">Ver mi Portfolio</a>
+            </div>
                 <div class="btns">
                     <a class="boton" href="http://127.0.0.1:5501">DESCARGAR CV</a>
                     <a class="boton"href="https://whatsapp.com/dl/code=AIGCozbq6G">CONTACTAME</a>
@@ -72,7 +75,7 @@
                 <p>Dic 2012,"EPET"</p>
                 <li>Tecnicatura Universitaria en Programación:</li>
                 <p> May 2024,"UTN"(en proceso)</p>
-            <ul>
+            </ul>
         </div>
         <hr>
         <div class="contenido">
