--- a/portafolio.html
+++ b/portafolio.html
@@ -14,12 +14,11 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="https://wa.me/549XXXXXXXXXX" target="_blank">Contacto</a></li>
             </ul>
-        </nav>
     </header>
 
     <main>
         <h2>Mis Proyectos</h2>
-        <p>Acá podés ver algunos trabajos que realicé recientemente.</p>
+        <p> Apretar inicio para volver al CV,no le cargue proyectos :P </p>
     </main>
 </body>
 </html>
