Agregando ultimas funciones alos botones

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
                 <a href="https://www.github.com/Celesgeo"> <i class='bx bxl-github'></i></div></a>
                 <a href="https://www.instagram.com/"><i class='bx bxl-instagram-alt'></i></a>
             </div>   
-            <p>Para mas información podes contactarme y descargar mi curriculum o ver mi portafolio</p>
+            <p>Para mas información podes contactarme,descargar mi curriculum o ver mi portafolio</p>
             <div class="btns">
-                <a class="boton" href="portafolio.html">Mi Portfolio</a>
-            </div>
-                <div class="btns">
-                    <a class="boton" href="http://127.0.0.1:5501">DESCARGAR CV</a>
+                <a class="boton" href="portafolio.html">MI PORTAFOLIO</a>
+                    <a class="boton" href="cv2025.jpg" download="CV_Orellano_Celeste.jpg">DESCARGAR CV</a>
                     <a class="boton"href="https://whatsapp.com/dl/code=AIGCozbq6G">CONTACTAME</a>
                 </div>
             </section>
