--- a/portafolio.html
+++ b/portafolio.html
@@ -18,7 +18,28 @@
 
     <main>
         <h2>Mis Proyectos</h2>
-        <p> Apretar inicio para volver al CV,no le cargue proyectos :P </p>
+        <p> Apretar inicio para volver al CV</p>
+        <hr>
+        <h2>PRACTICA DE FORMULARIO </h2>
+        <hr>
+        <H3>COMPLETAR DATOS:</H3>
+        <label for="">Ingrese nombre:</label>
+        <input type="text" id="nombre">
+        <br>
+        <label for="">Ingrese apellido:</label>
+        <input type="text" id="apellido"> 
+        <br>
+        <label for="">Ingrese documento:</label>
+        <input type="number" id="dni"> <button id="cargar">cargar</button>
+        <br>
+        <h3>LISTA DE PERSONAS DE LA MUTUAL</h3>
+        <hr>
+        <ul id="historial"></ul>
+        <br>
+        <button id="mostrar">AFILIADO RECIENTE</button>
+        <br>
+        <button id="eliminar">ELIMINAR</button>
+        <script src="script.js"></script>
     </main>
 </body>
 </html>
