--- a/portafolio.html
+++ b/portafolio.html
@@ -19,6 +19,7 @@
     <main>
         <h2>Mis Proyectos</h2>
         <p> Apretar inicio para volver al CV</p>
+        <p>Portafolio en desarrollo...</p>
         <hr>
         <h2>PRACTICA DE FORMULARIO </h2>
         <hr>
